<resources>
    <string name="app_name">InventoryApp</string>
    <string name="sign_up_title">Regisztráció</string>
    <string name="Username_hint">Felhasználónév</string>
    <string name="Name_hint">Név</string>
    <string name="Email_hint">Email</string>
    <string name="Password_hint">Jelszó</string>
    <string name="Sign_up_button">Regisztráció</string>
    <string name="Redirect_text">Már van fiókod? Bejelentkezés</string>
    <string name="login_title">Bejelentkezés</string>
    <string name="username_hint">Felhasználónév</string>
    <string name="password_hint">Jelszó</string>
    <string name="login_button">Bejelentkezés</string>
    <string name="login_redirect_text">Még nincs fiókod? Regisztrálj!</string>
    <string name="welcome_title">Üdvözöljük,</string>
    <string name="placeholder">test user</string>
    <string name="new_rent_button">Új bérlés</string>
    <string name="rents_button">Bérlések</string>
    <string name="costumes_button">Jelmezek megtekintése</string>
    <string name="add_costumes_button">Jelmezek hozzáadása</string>
    <string name="delete_costumes_button">Jelmezek törlése</string>
    <string name="edit_costumes_button">Jelmezek módosítása</string>
    <string name="delete_costume_title">Jelmez törlése</string>
    <string name="costume_name_hint">Jelmez neve</string>
    <string name="delete_button">Törlés</string>
    <string name="add_costume_hint">Új jelmez hozzáadása</string>
    <string name="costume_name">Jelmez neve</string>
    <string name="costume_size_hint">Jelmez mérete:</string>
    <string name="costume_price_hint">Jelmez napi ára</string>
    <string name="costume_add_button">Hozzáadás</string>
    <string name="size_L">L</string>
    <string name="Size_M">M</string>
    <string name="size_S">S</string>
    <string name="size_XS">XS</string>
    <string name="costume_title">Jelmezek</string>
    <string name="rent">Bérlés</string>
    <string name="rent_title">Bérlések</string>
    <string name="new_rent_title">Új bérlés</string>
    <string name="edit_button">Módosítás</string>
    <string name="edit_costumes">Jelmezadatok szerkesztése</string>
    <string name="costumeName">Jelmez neve</string>
    <string name="days_hint">Napok száma</string>
    <string name="customer_hint">Vevő neve</string>
    <string name="email_hint">Vevő email címe</string>
    <string name="paying_text">Fizetési mód:</string>
    <string name="creditcard">Bankkártya</string>
    <string name="cash">Készpénz</string>
    <string name="rent_button">Véglegesítés</string>
    <string name="costume">Jelmez</string>
</resources>