<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpaper"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/royal_gold"
        android:textAlignment="textEnd"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/royal_gold"
        android:textAlignment="textEnd"
        android:layout_marginStart="10dp"
        />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/new_rent_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textColor="@color/royal_gold"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/new_rent_button"
            android:background="@drawable/blue_border"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/rent_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textColor="@color/royal_gold"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/rents_button"
            android:background="@drawable/blue_border"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/costumes_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:textColor="@color/royal_gold"
            android:textSize="18sp"
            android:text="@string/costumes_button"
            android:textStyle="bold"
            android:background="@drawable/blue_border"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add_costumes_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textColor="@color/royal_gold"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:text="@string/add_costumes_button"
            android:textStyle="bold"
            android:background="@drawable/blue_border"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_costumes_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textColor="@color/royal_gold"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:text="@string/delete_costumes_button"
            android:textStyle="bold"
            android:background="@drawable/blue_border"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_costumes_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textColor="@color/royal_gold"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:text="@string/edit_costumes_button"
            android:textStyle="bold"
            android:background="@drawable/blue_border"/>
    </LinearLayout>




</LinearLayout>