<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/wallpaper"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AddCostumesActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_border"
        android:backgroundTint="@color/black"
        android:layout_marginTop="150dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/blue_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_costume_hint"
                android:textSize = "30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/royal_gold"/>

            <EditText
                android:autofillHints="name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/costumes_name"
                android:background="@drawable/blue_border"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/costume_name"
                android:textColorHint="@color/royal_gold"
                android:inputType="text"
                android:textColor="@color/royal_gold"/>

            <EditText
                android:autofillHints="username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/costume_price"
                android:background="@drawable/blue_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/costume_price_hint"
                android:textColorHint="@color/royal_gold"
                android:inputType="number"
                android:textColor="@color/royal_gold"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/costume_size_hint"
                android:textColor="@color/royal_gold"
                android:textColorHint="@color/royal_gold"
                android:textSize="25sp"
                android:layout_marginTop="30dp"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:orientation="horizontal"
                android:textColor="@color/royal_gold"
                android:textColorHint="@color/royal_gold">

                <RadioButton
                    android:id="@+id/size_xs_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:paddingStart="0dp"
                    android:text="@string/size_XS"
                    android:textColor="@color/royal_gold"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/size_s_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:paddingStart="0dp"
                    android:text="@string/size_S"
                    android:textColor="@color/royal_gold"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/size_m_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:paddingStart="0dp"
                    android:text="@string/Size_M"
                    android:textColor="@color/royal_gold"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/size_l_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:paddingStart="0dp"
                    android:text="@string/size_L"
                    android:textColor="@color/royal_gold"
                    android:textSize="25sp" />

            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/costume_add_button"
                android:id="@+id/costumes_to_DB"
                android:textSize="18sp"
                android:background="@drawable/blue_border"
                android:backgroundTint="@color/royal_gold"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>