<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/wallpaper"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
       android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="60dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/blue_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_rent_title"
                android:textSize = "30sp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/royal_gold"/>

            <EditText
                android:autofillHints="name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/rent_costume_name"
                android:background="@drawable/blue_border"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/costumeName"
                android:textColorHint="@color/royal_gold"
                android:inputType="text"
                android:textColor="@color/royal_gold"/>

            <EditText
                android:autofillHints="name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/rent_days"
                android:textColorHint="@color/royal_gold"
                android:background="@drawable/blue_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/days_hint"
                android:inputType="number"
                android:textColor="@color/royal_gold"/>

            <EditText
                android:autofillHints="name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/rent_customer_name"
                android:textColorHint="@color/royal_gold"
                android:background="@drawable/blue_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/customer_hint"
                android:inputType="text"
                android:textColor="@color/royal_gold"/>

            <EditText
                android:autofillHints="emailAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColorHint="@color/royal_gold"
                android:id="@+id/rent_customer_email"
                android:background="@drawable/blue_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/royal_gold"/>

            <TextView
                android:id="@+id/paying_options"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/royal_gold"
                android:layout_marginStart="8dp"
                android:text="@string/paying_text"
                android:textSize="22sp" />

            <RadioGroup
                android:id="@+id/rent_radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RadioButton
                android:id="@+id/credit_card_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/royal_gold"
                android:paddingEnd="15dp"
                android:paddingStart="0dp"
                android:text="@string/creditcard"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/cash_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/royal_gold"
                android:paddingEnd="15dp"
                android:paddingStart="0dp"
                android:text="@string/cash"
                android:textSize="20sp" />
            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/rent_button"
                android:id="@+id/add_rent_button"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:background="@drawable/blue_border"
                android:backgroundTint="@color/royal_gold"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>