<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/wallpaper"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="475dp"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:layout_marginTop="170dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/blue_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_title"
                android:textSize = "30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/royal_gold"/>

            <EditText
                android:autofillHints="name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/signup_name"
                android:background="@drawable/blue_border"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/Name_hint"
                android:textColorHint="@color/royal_gold"
                android:inputType="text"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:textColor="@color/royal_gold"/>

            <EditText
                android:autofillHints="username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/signup_username"
                android:background="@drawable/blue_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/Username_hint"
                android:textColorHint="@color/royal_gold"
                android:inputType="text"
                android:drawableStart="@drawable/ic_baseline_person_pin_24"
                android:textColor="@color/royal_gold"/>

            <EditText
                android:autofillHints="emailAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/signup_email"
                android:background="@drawable/blue_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/Email_hint"
                android:textColorHint="@color/royal_gold"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:textColor="@color/royal_gold"/>

            <EditText
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/signup_password"
                android:background="@drawable/blue_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/Password_hint"
                android:textColorHint="@color/royal_gold"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:textColor="@color/royal_gold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/Sign_up_button"
                android:id="@+id/signup_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:background="@drawable/blue_border"
                android:backgroundTint="@color/royal_gold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirectText"
                android:text="@string/Redirect_text"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/royal_gold"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>