<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/wallpaper"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="110dp"
        android:backgroundTint="@color/black"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/blue_border"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textSize = "36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/royal_gold"/>

            <EditText
                android:autofillHints="username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_username"
                android:background="@drawable/blue_border"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/username_hint"
                android:textColorHint="@color/royal_gold"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_baseline_person_pin_24"
                android:textColor="@color/royal_gold"/>

            <EditText
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_password"
                android:background="@drawable/blue_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password_hint"
                android:textColorHint="@color/royal_gold"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:textColor="@color/royal_gold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login_button"
                android:id="@+id/login_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:background="@drawable/blue_border"
                android:backgroundTint="@color/royal_gold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signupRedirectText"
                android:text="@string/login_redirect_text"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/royal_gold"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>